// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectItem /> renders properly 1`] = `
<div>
  <li
    class="jsx-2553597104"
  >
    <img
      alt="tjela logo"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="400"
      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
      style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
      width="400"
    />
    <div
      class="jsx-2553597104 backface"
    >
      <a
        class="jsx-2553597104 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-2553597104 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-2553597104 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-2553597104 fontXS"
      >
        *
         
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </li>
</div>
`;

exports[`<ProjectItem /> renders properly in English 1`] = `
<div>
  <li
    class="jsx-2553597104"
  >
    <img
      alt="tjela logo"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="400"
      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
      style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
      width="400"
    />
    <div
      class="jsx-2553597104 backface"
    >
      <a
        class="jsx-2553597104 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-2553597104 description fontS"
      >
        Social Media Management and Content Creation
      </p>
      <p
        class="jsx-2553597104 date fontXS"
      >
        2020
         - Present
      </p>
      <small
        class="jsx-2553597104 fontXS"
      >
        *
         
        in partnership with Sofia Ferreirinho
      </small>
    </div>
  </li>
</div>
`;

exports[`<ProjectItem /> renders properly in mobile 1`] = `
<div>
  <div
    class="jsx-2553597104 carouselItem grid"
    data-testid="projectItem_touch_div_tjela logo"
    data-times-touched="0"
  >
    <img
      alt="tjela logo"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="400"
      sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
      style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
      width="400"
    />
    <div
      class="jsx-2553597104 backface"
    >
      <a
        class="jsx-2553597104 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-2553597104 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-2553597104 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-2553597104 fontXS"
      >
        *
         
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </div>
</div>
`;

exports[`<ProjectItem /> renders properly when device is touch 1`] = `
<div>
  <div
    class="jsx-2553597104 carouselItem touch grid"
    data-testid="projectItem_touch_div_tjela logo"
    data-times-touched="1"
  >
    <img
      alt="tjela logo"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="400"
      sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
      style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
      width="400"
    />
    <div
      class="jsx-2553597104 backface"
    >
      <a
        class="jsx-2553597104 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-2553597104 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-2553597104 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-2553597104 fontXS"
      >
        *
         
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </div>
</div>
`;

exports[`<ProjectItem /> renders properly with isGrid being false 1`] = `
<div>
  <div
    class="jsx-2553597104 carouselItem"
    data-testid="projectItem_touch_div_tjela logo"
    data-times-touched="0"
  >
    <img
      alt="tjela logo"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="400"
      sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
      style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
      width="400"
    />
    <div
      class="jsx-2553597104 backface"
    >
      <a
        class="jsx-2553597104 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-2553597104 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-2553597104 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-2553597104 fontXS"
      >
        *
         
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </div>
</div>
`;

exports[`<ProjectItem /> renders properly with preloadImage being false 1`] = `
<div>
  <li
    class="jsx-2553597104"
  >
    <img
      alt="tjela logo"
      data-nimg="1"
      decoding="async"
      height="400"
      loading="lazy"
      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
      style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
      width="400"
    />
    <div
      class="jsx-2553597104 backface"
    >
      <a
        class="jsx-2553597104 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-2553597104 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-2553597104 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-2553597104 fontXS"
      >
        *
         
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </li>
</div>
`;
